--- a/data-pipeline/dvc.yaml
+++ b/data-pipeline/dvc.yaml
@@ -1,12 +1,12 @@
 stages:
   run_pipeline:
-    cmd: python scripts/main_pipeline.py
+    cmd: cd scripts && python main_pipeline.py --config ../configs/pipeline_config.json --skip-bias-handling
+    wdir: .
     deps:
       - scripts/main_pipeline.py
       - scripts/preprocessing.py
       - scripts/validation.py
       - scripts/bias_detection.py
-      - scripts/automated_bias_handler.py
       - configs/pipeline_config.json
     outs:
       - data/processed/processed_discharge_summaries.csv
