Complete MLOps pipeline with feature engineering and DVC
- Added advanced feature engineering script (47 features)
- Integrated medical keyword detection and NLP features
- Configured DVC pipeline with two stages
- Updated documentation with complete pipeline details
- Full reproducible pipeline ready for production
- Execution time: 66 seconds for complete pipeline

--- a/.gitignore
+++ b/.gitignore
@@ -226,3 +226,27 @@ mlruns/.DS_Store
 **/.DS_Store
 .DS_Store
 **/.DS_Store
+
+# DVC
+/data/raw/*.csv
+/data/processed/*.csv
+/logs/*.log
+*.dvc.lock
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+.Python
+venv/
+ENV/
+
+# System
+.DS_Store
+*.swp
+.idea/
+.vscode/
+
+# Logs
+logs/*.json
+logs/bias_plots/*.png
